# auto-track-turret

./: .gitignore  README.md
pi_vision/: CMakeLists.txt
pi_vision/src/: color_track.cpp  live_demo.cpp
